simple-share/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shield
  namespace: shield-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    nginx.org/client-max-body-size: "0"
spec:
  rules:
    - host: shield.somedomain.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shield
                port:
                  number: 80
